# text-histo

./: .gitignore  README.md  pyproject.toml
examples/: sample_categorical.txt  sample_numeric.txt
text_histo/: __init__.py  text_histogram.py
